--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -7,11 +7,18 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF
                 PROVINCIAL CHIEF
-                <button (click)="previousPage()" *ngIf="has_previous" color="primary" mat-flat-button>Back To List
-                </button>
             </div>
             <!--            <button (click)="assignValues()">Patch Dummy Data</button>-->
         </div>
+
+    </div>
+    <div class="col-lg-3 col-sm-12 self-center">
+        <button class="py-1 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="previousPage()"
+                *ngIf="has_previous">
+            <mat-icon class="mr-2">keyboard_backspace</mat-icon>
+            Back To List
+        </button>
+
     </div>
 
 
@@ -57,7 +64,8 @@
                                                appNumberOnly autocomplete="off"
                                                formControlName="TourDate" matInput maxlength="30"
                                                placeholder="Date of Visit"/>
-                                        <mat-datepicker-toggle [disabled]="(!zone || !edit_mode) && currentActivity.R" [for]="picker"
+                                        <mat-datepicker-toggle [disabled]="(!zone || !edit_mode) && currentActivity.R"
+                                                               [for]="picker"
                                                                matSuffix></mat-datepicker-toggle>
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>
@@ -99,11 +107,13 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Departure Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerDeparture" formControlName="DepartureFromTime"
+                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerDeparture"
+                                                   formControlName="DepartureFromTime"
                                                    matInput
                                                    placeholder="Departure Time" readonly
                                                    type="text"/>
-                                            <mat-icon (click)="openFromIcon(timepickerDeparture)" *ngIf="edit_mode" class="cursor-pointer"
+                                            <mat-icon (click)="openFromIcon(timepickerDeparture)" *ngIf="edit_mode"
+                                                      class="cursor-pointer"
                                                       matSuffix>schedule
                                             </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
@@ -132,11 +142,13 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Arrival Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerArrival" formControlName="ArrivalAtTime"
+                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerArrival"
+                                                   formControlName="ArrivalAtTime"
                                                    matInput
                                                    placeholder="Arrival Time" readonly
                                                    type="text"/>
-                                            <mat-icon (click)="openFromIcon(timepickerArrival)" *ngIf="edit_mode" class="cursor-pointer"
+                                            <mat-icon (click)="openFromIcon(timepickerArrival)" *ngIf="edit_mode"
+                                                      class="cursor-pointer"
                                                       matSuffix>schedule
                                             </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
@@ -152,7 +164,8 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                                   autocomplete="off"
                                                    formControlName="NoOfDefaulterContacted"
                                                    matInput placeholder="No. Of Defaulters Contacted"/>
                                         </mat-form-field>
@@ -162,7 +175,8 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                                   autocomplete="off"
                                                    formControlName="ResultContactMade"
                                                    matInput placeholder="Results Of Contacts So Made"/>
                                         </mat-form-field>
@@ -180,7 +194,8 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Remarks</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off" formControlName="Remarks"
+                                            <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                                   formControlName="Remarks"
                                                    matInput placeholder="Remarks"/>
                                         </mat-form-field>
                                     </div>
@@ -210,14 +225,16 @@
                         <mat-icon class="mr-2">save</mat-icon>
                         Update
                     </button>
-                    <button (click)="changeStatus('','S')" *ngIf="isUpdate==true && currentActivity.U" class="mr-2" color="primary"
+                    <button (click)="changeStatus('','S')" *ngIf="isUpdate==true && currentActivity.U" class="mr-2"
+                            color="primary"
                             mat-raised-button type="button">
                         <mat-icon class="mr-2">check_circle</mat-icon>
                         Submit
                     </button>
                     <button (click)="onClearForm()"
                             *ngIf="currentActivity.C"
-                            class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button type="button">
+                            class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                            color="danger" mat-raised-button type="button">
                         <mat-icon class="mr-2"> clear_all</mat-icon>
                         Clear
                     </button>
@@ -325,7 +342,8 @@
                                     mat-icon-button>
                                 <mat-icon>edit</mat-icon>
                             </button>
-                            <button (click)="deleteData(single_list)" *ngIf="checkStatus(single_list,'delete') && currentActivity.D && edit_mode"
+                            <button (click)="deleteData(single_list)"
+                                    *ngIf="checkStatus(single_list,'delete') && currentActivity.D && edit_mode"
                                     mat-icon-button>
                                 <mat-icon>delete</mat-icon>
                             </button>
