--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -7,9 +7,17 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading" style="display: flex;justify-content: space-between">TOUR DIARY & PROGRESS REPORT OF
                 REGIONAL CHIEF
-                <button (click)="previousPage()" *ngIf="has_previous" color="primary" mat-flat-button>Back To List
-                </button>
+
             </div>
+        </div>
+        <div class="col-lg-3 col-sm-12 self-center">
+
+            <button class="py-1 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                    (click)="previousPage()" *ngIf="has_previous">
+                <mat-icon class="mr-2">keyboard_backspace</mat-icon>
+                Back To List
+            </button>
+
         </div>
     </div>
 
@@ -57,11 +65,13 @@
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Tour Date<strong
                                             class="matMandatory">*</strong></mat-label>
-                                        <input (dateChange)="setDate()" [matDatepicker]="picker2" [max]="maxDate" appNumberOnly
+                                        <input (dateChange)="setDate()" [matDatepicker]="picker2" [max]="maxDate"
+                                               appNumberOnly
                                                autocomplete="off"
                                                formControlName="TourDate" matInput maxlength="8" placeholder="Tour Date"
                                                readonly/>
-                                        <mat-datepicker-toggle (click)="checkZone()" [disabled]="!zone" [disabled]="(!zone || !edit_mode) && currentActivity.R"
+                                        <mat-datepicker-toggle (click)="checkZone()" [disabled]="!zone"
+                                                               [disabled]="(!zone || !edit_mode) && currentActivity.R"
                                                                [for]="picker2"
                                                                matSuffix></mat-datepicker-toggle>
                                         <mat-datepicker #picker2></mat-datepicker>
@@ -111,10 +121,12 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Departure Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerDeparture" formControlName="DepartureFromTime"
+                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerDeparture"
+                                                   formControlName="DepartureFromTime"
                                                    matInput placeholder=">Departure Time"
                                                    readonly type="text"/>
-                                            <mat-icon (click)="openFromIcon(timepickerDeparture)" *ngIf="edit_mode" class="cursor-pointer"
+                                            <mat-icon (click)="openFromIcon(timepickerDeparture)" *ngIf="edit_mode"
+                                                      class="cursor-pointer"
                                                       matSuffix>schedule
                                             </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
@@ -143,10 +155,12 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Arrival Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerArrival" formControlName="ArrivalAtTime"
+                                            <input [format]="DateFormat()" [ngxTimepicker]="timepickerArrival"
+                                                   formControlName="ArrivalAtTime"
                                                    matInput placeholder="Arrival Time" readonly
                                                    type="text"/>
-                                            <mat-icon (click)="openFromIcon(timepickerArrival)" *ngIf="edit_mode" class="cursor-pointer"
+                                            <mat-icon (click)="openFromIcon(timepickerArrival)" *ngIf="edit_mode"
+                                                      class="cursor-pointer"
                                                       matSuffix>schedule
                                             </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
@@ -162,7 +176,8 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                                   autocomplete="off"
                                                    formControlName="NoOfDefaulterContacted"
                                                    matInput placeholder="No. Of Defaulters Contacted"/>
                                         </mat-form-field>
@@ -172,7 +187,8 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                                   autocomplete="off"
                                                    formControlName="ResultContactMade"
                                                    matInput placeholder="Results Of Contacts So Made"/>
                                         </mat-form-field>
@@ -182,7 +198,8 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                            <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                                   autocomplete="off"
                                                    formControlName="MeasureBoostUpRecord"
                                                    matInput placeholder="Measure Boosting Up Record"/>
                                         </mat-form-field>
@@ -191,7 +208,8 @@
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Remarks</mat-label>
-                                            <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off" formControlName="Remarks"
+                                            <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                                   formControlName="Remarks"
                                                    matInput placeholder="Remarks"/>
                                         </mat-form-field>
                                     </div>
@@ -204,19 +222,22 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button (click)="saveTourDiary()" *ngIf="isUpdate===false && currentActivity.C && edit_mode"
+                                <button (click)="saveTourDiary()"
+                                        *ngIf="isUpdate===false && currentActivity.C && edit_mode"
                                         class="mr-2 bg-green" color="primary"
                                         mat-raised-button type="button">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
-                                <button (click)="saveTourDiary()" *ngIf="isUpdate===true && currentActivity.U && edit_mode"
+                                <button (click)="saveTourDiary()"
+                                        *ngIf="isUpdate===true && currentActivity.U && edit_mode"
                                         class="mr-2 bg-green" color="primary"
                                         mat-raised-button type="button">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
-                                <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode" [disabled]="checkDisable"
+                                <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode"
+                                        [disabled]="checkDisable"
                                         class="mr-2" color="primary" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
@@ -224,7 +245,8 @@
                                 </button>
                                 <button (click)="onClearForm()"
                                         *ngIf="currentActivity.C && edit_mode"
-                                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button
+                                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                                        color="danger" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2"> clear_all</mat-icon>
                                     Clear
@@ -265,13 +287,15 @@
                                     <td class="border-r border-gray-400">
                                         <button
                                             (click)="edit(single_list); container.scrollTop = 0"
-                                            *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode" mat-icon-button
+                                            *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode"
+                                            mat-icon-button
                                             type="button">
                                             <mat-icon>edit</mat-icon>
                                         </button>
                                         <button
                                             (click)="delete(single_list,'C')"
-                                            *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode" mat-icon-button
+                                            *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode"
+                                            mat-icon-button
                                             type="button">
                                             <mat-icon>delete</mat-icon>
                                         </button>
