--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -773,7 +773,7 @@
                 <tr *ngFor="let mcoDiary of TourDiaryList">
                     <td>{{systemGenerated?.DAnnualTarget}}</td>
                     <td>{{systemGenerated?.DPropoTargetEOM}}</td>
-                    <td></td>
+                    <td>{{systemGenerated?.DTotalDisbEOPM}}</td>
                     <td>{{systemGenerated?.DDisbDuringMonth}}</td>
                     <td>{{systemGenerated?.DTotalDisbDuringMonth }}</td>
                     <td>{{systemGenerated?.DIncreaseDeficit}}</td>
